[package]
name = "tusk"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.47", features = ["derive"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
directories = "6.0.0"
nanoid = "0.4.0"
colored = "3.0.0"
